[package]
name = "svarog"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utility
ron = "0.7.0"
csv = "1.3.0"
rand_core = "0.6"
image = "0.24.9"
winit = "0.28"
funty = "2.0.0"
serde = { version = "1" }
itertools = "0.6.0"

# Bevy
bevy = { version = "0.12.1", default-features = false, features = [
    "multi-threaded",       # Run with multithreading
    "bevy_asset",           # Assets management
    "bevy_audio",           # Builtin audio
    "bevy_gilrs",           # Gamepad input support
    "bevy_scene",           # Scenes management
    "bevy_winit",           # Window management (cross-platform Winit backend)
    "bevy_render",          # Rendering framework core
    "bevy_core_pipeline",   # Common rendering abstractions
    "bevy_sprite",          # 2D (sprites) rendering
    "vorbis",               # Audio: OGG Vorbis
    "png",                  # PNG image format for simple 2D images
    "asset_processor",      # Asset processing
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize",            # Support for `serde` Serialize/Deserialize
    "file_watcher",         # Asset hot-reloading
    "embedded_watcher",     # Hot-reloading for Bevy's internal/builtin assets
]  }

bevy_asset_loader = { version = "0.19.0", features = [
    "2d",
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.9.0", features = ["ron", "csv"] }
bevy_trauma_shake = "0.1.0"
bevy_tweening = "0.9.0"
bevy_kira_audio = "0.18.0"
bevy_rand = { version = "0.4", features = ["rand_chacha", "wyrand"] }
bresenham = "0.1.1"
doryen-fov = "*"
priority-queue = "2.0.2"
pathfinding = "4.9.1"

[features]
debug_mode = []
